<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="apps.yonga.com.tictactoe2.Welcome">

    <Button
        android:id="@+id/normalMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/button"
        android:onClick="@string/normal"
        android:text="@string/normalText" />

    <!--<Button-->
        <!--android:id="@+id/UltimateMode"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignLeft="@+id/normalMode"-->
        <!--android:layout_below="@+id/normalMode"-->
        <!--android:layout_marginTop="41dp"-->
        <!--android:background="@color/button"-->
        <!--android:onClick="@string/ultimate"-->
        <!--android:text="@string/ultimateText" />-->

    <Button
        android:id="@+id/UltimateMode2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/normalMode"
        android:layout_below="@+id/normalMode"
        android:layout_marginTop="41dp"
        android:background="@color/button"
        android:onClick="@string/ultimate2"
        android:text="@string/ultimateText2" />

    <Button
        android:id="@+id/AboutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/UltimateMode"
        android:layout_below="@+id/UltimateMode"
        android:layout_marginTop="42dp"
        android:background="@color/button"
        android:onClick="@string/about"
        android:text="@string/aboutText" />

    <Button
        android:id="@+id/Exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AboutBtn"
        android:layout_below="@+id/AboutBtn"
        android:layout_marginTop="41dp"
        android:background="@color/button"
        android:onClick="@string/exit"
        android:text="@string/exitText" />
</LinearLayout>
